--- a/index.html
+++ b/index.html
@@ -2,56 +2,95 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Крутани и Забери</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background: linear-gradient(135deg, #f9f9f9, #e0e0ff);
-        }
-        h1 {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        button {
-            font-size: 20px;
-            padding: 10px 30px;
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .result {
-            font-size: 24px;
-            margin-top: 30px;
-            font-weight: bold;
-            color: #333;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Крутани и Забери</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: linear-gradient(135deg, #f9f9f9, #e0e0ff);
+    }
+    h1 {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+    button {
+      font-size: 20px;
+      padding: 10px 30px;
+      background-color: #4CAF50;
+      border: none;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background-color: #888;
+      cursor: not-allowed;
+    }
+    .result {
+      font-size: 24px;
+      margin-top: 30px;
+      font-weight: bold;
+      color: #333;
+    }
+    .spinning {
+      animation: spin 0.8s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
-    <h1>Крутани и Забери</h1>
-    <p>Нажми кнопку, чтобы попытать удачу!</p>
-    <button onclick="spin()">Попробовать</button>
-    <div class="result" id="result"></div>
+  <h1>Крутани и Забери</h1>
+  <p>Нажми кнопку и узнай свой выигрыш!</p>
+  <button id="spinBtn" onclick="spin()">Попробовать</button>
+  <div class="result" id="result"></div>
 
-    <script>
-        function spin() {
-            const prizes = [0, 50, 100, 200, 500];
-            const prize = prizes[Math.floor(Math.random() * prizes.length)];
-            const resultEl = document.getElementById('result');
-            if (prize === 0) {
-                resultEl.textContent = 'Увы, не повезло. Попробуй ещё!';
-            } else {
-                resultEl.textContent = `Ты выиграл ${prize}₽!`;
-            }
-        }
-    </script>
+  <script>
+    let canSpin = true;
+
+    const chances = [
+      { prize: 0, chance: 60 },
+      { prize: 50, chance: 25 },
+      { prize: 100, chance: 10 },
+      { prize: 500, chance: 5 }
+    ];
+
+    function getPrize() {
+      const rand = Math.random() * 100;
+      let cumulative = 0;
+      for (let i = 0; i < chances.length; i++) {
+        cumulative += chances[i].chance;
+        if (rand < cumulative) return chances[i].prize;
+      }
+      return 0;
+    }
+
+    function spin() {
+      if (!canSpin) return;
+
+      const btn = document.getElementById('spinBtn');
+      const resultEl = document.getElementById('result');
+
+      btn.disabled = true;
+      canSpin = false;
+      resultEl.innerHTML = 'Крутится...';
+
+      setTimeout(() => {
+        const prize = getPrize();
+        resultEl.innerHTML = prize === 0
+          ? 'Увы, не повезло. Попробуй ещё!'
+          : `Ты выиграл ${prize}₽!`;
+
+        setTimeout(() => {
+          canSpin = true;
+          btn.disabled = false;
+        }, 10000); // 10 сек ожидания
+      }, 1500); // имитация "кручения"
+    }
+  </script>
 </body>
 </html>
