--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     h1 {
       font-size: 40px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     #wheel-container {
@@ -35,9 +35,9 @@
       height: 0;
       border-left: 20px solid transparent;
       border-right: 20px solid transparent;
-      border-bottom: 30px solid #FFD700;
+      border-top: 30px solid #FFD700;
       position: absolute;
-      top: -40px;
+      bottom: -40px;
       left: calc(50% - 20px);
       z-index: 10;
     }
@@ -57,21 +57,8 @@
       transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
     }
 
-    .sector-label {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 28px;
-      font-weight: bold;
-      color: #000;
-      pointer-events: none;
-    }
-
     button {
-      margin-top: 20px;
+      margin-top: 30px;
       font-size: 20px;
       padding: 10px 30px;
       background-color: #FFD700;
@@ -87,27 +74,16 @@
     }
 
     .result {
-      font-size: 24px;
-      margin-top: 20px;
+      font-size: 28px;
+      margin-top: 40px;
       font-weight: bold;
-    }
-
-    .confetti {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      background-image: url('https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif');
-      background-size: cover;
-      z-index: 999;
-      display: none;
+      text-align: center;
     }
 
     .sidebar {
       background: rgba(255, 255, 255, 0.1);
       padding: 20px;
-      margin-top: 30px;
+      margin-top: 50px;
       border-radius: 10px;
       color: #fff;
     }
@@ -125,6 +101,8 @@
       padding: 10px 20px;
       background-color: #333;
       color: white;
+      border: none;
+      border-radius: 5px;
     }
 
   </style>
@@ -134,10 +112,8 @@
   <h1>Крутани и Забери</h1>
 
   <div id="wheel-container">
+    <div id="wheel"></div>
     <div id="pointer"></div>
-    <div id="wheel">
-      <div class="sector-label" id="label">?</div>
-    </div>
   </div>
 
   <button id="spinBtn" onclick="spin()">Крутить</button>
@@ -161,11 +137,6 @@
   </div>
 </div>
 
-<div class="confetti" id="confetti"></div>
-
-<audio id="winSound" src="https://www.soundjay.com/buttons/sounds/button-10.mp3"></audio>
-<audio id="spinSound" src="https://www.soundjay.com/button/beep-07.mp3"></audio>
-
 <script>
   let spinning = false;
   let currentRotation = 0;
@@ -177,11 +148,7 @@
   const wheel = document.getElementById("wheel");
   const resultEl = document.getElementById("result");
   const spinBtn = document.getElementById("spinBtn");
-  const confetti = document.getElementById("confetti");
-  const label = document.getElementById("label");
   const userCountEl = document.getElementById("userCount");
-  const winSound = document.getElementById("winSound");
-  const spinSound = document.getElementById("spinSound");
 
   function spin() {
     if (spinning) return;
@@ -189,8 +156,6 @@
     spinning = true;
     spinBtn.disabled = true;
     resultEl.innerHTML = "Крутим...";
-    label.textContent = "?";
-    spinSound.play();
 
     const sector = Math.floor(Math.random() * prizes.length);
     const stopAngle = 360 * 5 + sector * sectorAngle + sectorAngle / 2;
@@ -200,20 +165,11 @@
 
     setTimeout(() => {
       const prize = prizes[sector];
-      label.textContent = prize + "₽";
-      resultEl.innerHTML = prize === 0 ? "Увы, не повезло." : `Ты выиграл ${prize}₽!`;
-      if (prize > 0) {
-        confetti.style.display = "block";
-        winSound.play();
-      }
-
-      setTimeout(() => {
-        confetti.style.display = "none";
-        spinBtn.disabled = false;
-        spinning = false;
-        userCount++;
-        userCountEl.textContent = userCount;
-      }, 4000);
+      resultEl.innerHTML = prize === 0 ? "Увы, не повезло." : `🎉 Ты выиграл ${prize}₽!`;
+      spinBtn.disabled = false;
+      spinning = false;
+      userCount++;
+      userCountEl.textContent = userCount;
     }, 5000);
   }
 </script>
