--- a/index.html
+++ b/index.html
@@ -2,26 +2,280 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рулетка</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Крутани и Забери</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #1a1a2e;
+      color: #fff;
+      text-align: center;
+    }
+    .overlay {
+      padding: 40px 20px;
+      min-height: 100vh;
+    }
+    h1 {
+      font-size: 40px;
+      margin-bottom: 30px;
+    }
+    #wheel-container {
+      margin: 0 auto;
+      width: 320px;
+      height: 320px;
+    }
+    #wheel {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 10px solid #FFD700;
+      background: conic-gradient(
+        #e74c3c 0deg 90deg,
+        #f1c40f 90deg 180deg,
+        #2ecc71 180deg 270deg,
+        #3498db 270deg 360deg
+      );
+      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
+    }
+    button {
+      margin-top: 30px;
+      font-size: 20px;
+      padding: 10px 30px;
+      background-color: #FFD700;
+      border: none;
+      color: black;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background-color: #888;
+      cursor: not-allowed;
+    }
+    .result {
+      font-size: 28px;
+      margin-top: 40px;
+      font-weight: bold;
+    }
+    .sidebar {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      margin-top: 50px;
+      border-radius: 10px;
+    }
+    .info-buttons {
+      margin-top: 30px;
+    }
+    .info-buttons button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+    #modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    #modalContent {
+      background: #222;
+      padding: 30px;
+      max-width: 90%;
+      max-height: 80%;
+      overflow-y: auto;
+      border-radius: 10px;
+      text-align: left;
+    }
+    #modalContent h2 {
+      text-align: center;
+      margin-top: 0;
+    }
+    #modalClose {
+      margin-top: 20px;
+      background-color: #FFD700;
+      color: black;
+    }
+  </style>
 </head>
 <body>
-    <div class="wheel-container">
-        <div id="wheel" class="wheel">
-            <div class="sector" data-value="50">50</div>
-            <div class="sector" data-value="100">100</div>
-            <div class="sector" data-value="200">200</div>
-            <div class="sector" data-value="300">300</div>
-            <div class="sector" data-value="500">500</div>
-            <div class="sector" data-value="1000">1000</div>
-        </div>
-        <button id="spinButton">Крутить</button>
-        <div id="result">Результат: <span id="amount">0</span>₽</div>
-        <div id="code">Код: <span id="payoutCode">----</span></div>
-    </div>
+<div class="overlay">
+  <h1>Крутани и Забери</h1>
 
-    <script src="script.js"></script>
+  <div id="wheel-container">
+    <div id="wheel"></div>
+  </div>
+
+  <button id="spinBtn" onclick="spin()">Крутить</button>
+  <div class="result" id="result"></div>
+
+  <button id="payBtn" onclick="unlock()" style="display:none;">Попробовать снова за 50₽</button>
+
+  <div class="sidebar">
+    <h3>ТОП Победителей дня:</h3>
+    <ul id="topWinners">
+      <li>🧑 Алексей — 500₽</li>
+      <li>👩 Мария — 100₽</li>
+      <li>🧔 Игорь — 50₽</li>
+    </ul>
+    <p>🧮 Участников сегодня: <span id="userCount">17</span></p>
+  </div>
+
+  <div class="info-buttons">
+    <button onclick="showModal('rules')">📜 Правила участия</button>
+    <button onclick="showModal('faq')">❓ FAQ</button>
+    <button onclick="showModal('policy')">📋 Политика</button>
+    <button onclick="showModal('share')">📲 Поделиться</button>
+  </div>
+</div>
+
+<div id="modal">
+  <div id="modalContent">
+    <h2 id="modalTitle"></h2>
+    <div id="modalText"></div>
+    <button id="modalClose" onclick="closeModal()">Закрыть</button>
+  </div>
+</div>
+
+<script>
+  let spinning = false;
+  let currentRotation = 0;
+  let userCount = 17;
+  let canSpin = true;
+  const adminMode = true;
+  let firstSpin = true;
+
+  const wheel = document.getElementById("wheel");
+  const resultEl = document.getElementById("result");
+  const spinBtn = document.getElementById("spinBtn");
+  const payBtn = document.getElementById("payBtn");
+  const userCountEl = document.getElementById("userCount");
+  const topWinners = document.getElementById("topWinners");
+
+  function getPrize() {
+    if (firstSpin) return 50;
+    const chances = [
+      { prize: 0, chance: 75 },
+      { prize: 50, chance: 15 },
+      { prize: 100, chance: 7 },
+      { prize: 500, chance: 3 }
+    ];
+    const rand = Math.random() * 100;
+    let cumulative = 0;
+    for (let i = 0; i < chances.length; i++) {
+      cumulative += chances[i].chance;
+      if (rand < cumulative) return chances[i].prize;
+    }
+    return 0;
+  }
+
+  function spin() {
+    if (spinning || (!canSpin && !adminMode)) return;
+
+    spinning = true;
+    spinBtn.disabled = true;
+    resultEl.innerHTML = "Крутим...";
+
+    const prize = getPrize();
+    const sector = prize === 0 ? 0 : prize === 50 ? 1 : prize === 100 ? 2 : 3;
+    const stopAngle = 360 * 5 + sector * 90 + 45;
+    currentRotation += stopAngle;
+
+    wheel.style.transform = `rotate(${currentRotation}deg)`;
+
+    setTimeout(() => {
+      resultEl.innerHTML = prize === 0 ? "Увы, не повезло." : `🎉 Ты выиграл ${prize}₽!`;
+      spinning = false;
+      if (!adminMode) {
+        canSpin = false;
+        payBtn.style.display = "inline-block";
+      }
+      spinBtn.disabled = !adminMode;
+      userCount += Math.floor(Math.random() * 3) + 1;
+      userCountEl.textContent = userCount;
+      firstSpin = false;
+    }, 5000);
+  }
+
+  function unlock() {
+    canSpin = true;
+    spinBtn.disabled = false;
+    payBtn.style.display = "none";
+  }
+
+  const names = ["Алексей", "Мария", "Игорь", "Светлана", "Денис", "Ольга", "Сергей", "Екатерина"];
+  const prizesFake = [50, 100, 500];
+
+  setInterval(() => {
+    const ul = topWinners;
+    ul.innerHTML = "";
+    for (let i = 0; i < 3; i++) {
+      const name = names[Math.floor(Math.random() * names.length)];
+      const prize = prizesFake[Math.floor(Math.random() * prizesFake.length)];
+      ul.innerHTML += `<li>👤 ${name} — ${prize}₽</li>`;
+    }
+  }, 30000);
+
+  const modal = document.getElementById("modal");
+  const modalTitle = document.getElementById("modalTitle");
+  const modalText = document.getElementById("modalText");
+
+  function showModal(type) {
+    const content = {
+      rules: [
+        "1. Каждый пользователь может один раз бесплатно попытать удачу.",
+        "2. Для повторной попытки необходимо внести оплату.",
+        "3. Система случайным образом определяет результат крутки.",
+        "4. Деньги перечисляются в соответствии с инструкцией после выигрыша.",
+        "5. Попытки накрутки или взлома приведут к блокировке.",
+        "6. Организатор оставляет за собой право вносить изменения в правила без уведомления."
+      ],
+      faq: [
+        "<b>Как работает игра?</b><br>Вы нажимаете кнопку, колесо крутится и случайным образом определяет ваш приз.",
+        "<b>Что нужно, чтобы играть повторно?</b><br>Необходимо внести небольшую плату — после этого доступна новая попытка.",
+        "<b>Как получить выигрыш?</b><br>После выигрыша следуйте инструкции на экране.",
+        "<b>Можно ли играть бесплатно?</b><br>Да, первая попытка предоставляется бесплатно.",
+        "<b>Выигрыш гарантирован?</b><br>Нет. Все результаты определяются случайным образом."
+      ],
+      policy: [
+        "1. Сайт является развлекательным сервисом.",
+        "2. Результаты не гарантированы и определяются генератором случайных чисел.",
+        "3. Администрация не несёт ответственности за ошибочные ожидания пользователя.",
+        "4. Все выигрыши проверяются вручную перед выплатой.",
+        "5. Возврат средств невозможен после участия."
+      ],
+      share: [
+        "Поделись с друзьями и получи бонус!",
+        "Скопируй и отправь им эту ссылку:<br><b>https://chatgpt4142141241241.github.io/vk-cash-test/</b>",
+        "Или нажми на кнопку ниже:", "<button onclick="copyLink()">🔗 Скопировать ссылку</button>", "<div id="copyMsg"></div>",
+        "👥 Приглашай друзей и получай +1 крутку за каждого участника!"
+      ]
+    };
+
+    modalTitle.innerText = {
+      rules: "Правила участия",
+      faq: "FAQ",
+      policy: "Политика",
+      share: "Поделиться"
+    }[type];
+
+    modalText.innerHTML = "<ul><li>" + content[type].join("</li><li>") + "</li></ul>";
+    modal.style.display = "flex";
+  }
+
+  function closeModal() {
+    modal.style.display = "none";
+  }
+
+  function copyLink() {
+    const link = "https://chatgpt4142141241241.github.io/vk-cash-test/";
+  }
+</script>
 </body>
 </html>
