--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -66,6 +65,29 @@
   <div class="result" id="result"></div>
 
   <button id="payBtn" onclick="unlock()" style="display:none;">Попробовать снова за 50₽</button>
+  <div class="sidebar">
+    <h3>ТОП Победителей дня:</h3>
+    <ul id="topWinners">
+      <li>🧑 Алексей — 500₽</li>
+      <li>👩 Мария — 100₽</li>
+      <li>🧔 Игорь — 50₽</li>
+    </ul>
+    <p>🧮 Участников сегодня: <span id="userCount">17</span></p>
+  </div>
+  <div class="info-buttons">
+    <button onclick="showModal('rules')">📜 Правила участия</button>
+    <button onclick="showModal('faq')">❓ FAQ</button>
+    <button onclick="showModal('policy')">📋 Политика</button>
+    <button onclick="showModal('share')">📲 Поделиться</button>
+  </div>
+</div>
+
+<div id="modal">
+  <div id="modalContent">
+    <h2 id="modalTitle"></h2>
+    <div id="modalText"></div>
+    <button id="modalClose" onclick="closeModal()">Закрыть</button>
+  </div>
 </div>
 
 <script>
@@ -126,6 +148,52 @@
     canSpin = true;
     spinBtn.disabled = false;
     payBtn.style.display = "none";
+  }
+
+  function showModal(type) {
+    const modal = document.getElementById("modal");
+    const modalTitle = document.getElementById("modalTitle");
+    const modalText = document.getElementById("modalText");
+    const content = {
+      rules: [
+        "1. Один бесплатный запуск.",
+        "2. За повтор платишь.",
+        "3. Всё рандом.",
+        "4. Выплаты вручную.",
+        "5. Взлом — бан.",
+        "6. Правила могут меняться."
+      ],
+      faq: [
+        "<b>Как играть?</b><br>Крути колесо, жди результат.",
+        "<b>Повтор?</b><br>После оплаты.",
+        "<b>Как получить выигрыш?</b><br>Отправь код в Telegram.",
+        "<b>Бесплатно?</b><br>Да, только первый раз.",
+        "<b>Гарантия?</b><br>Нет. Всё по-честному и случайно."
+      ],
+      policy: [
+        "1. Это развлечение.",
+        "2. Ничего не гарантируем.",
+        "3. Ты сам принимаешь решение.",
+        "4. Выплаты проверяются.",
+        "5. Нет возврата."
+      ],
+      share: [
+        "Приглашай друзей!",
+        "Ссылка:<br><b>https://chatgpt4142141241241.github.io/vk-cash-test/</b>"
+      ]
+    };
+    modalTitle.innerText = {
+      rules: "Правила участия",
+      faq: "FAQ",
+      policy: "Политика",
+      share: "Поделиться"
+    }[type];
+    modalText.innerHTML = "<ul><li>" + content[type].join("</li><li>") + "</li></ul>";
+    modal.style.display = "flex";
+  }
+
+  function closeModal() {
+    document.getElementById("modal").style.display = "none";
   }
 </script>
 </body>
