--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -52,6 +53,45 @@
       margin-top: 40px;
       font-weight: bold;
     }
+    .info-buttons {
+      margin-top: 30px;
+    }
+    .info-buttons button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+    #modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    #modalContent {
+      background: #222;
+      padding: 30px;
+      max-width: 90%;
+      max-height: 80%;
+      overflow-y: auto;
+      border-radius: 10px;
+      text-align: left;
+    }
+    #modalContent h2 {
+      text-align: center;
+      margin-top: 0;
+    }
+    #modalClose {
+      margin-top: 20px;
+      background-color: #FFD700;
+      color: black;
+    }
   </style>
 </head>
 <body>
@@ -63,17 +103,8 @@
 
   <button id="spinBtn" onclick="spin()">Крутить</button>
   <div class="result" id="result"></div>
-
   <button id="payBtn" onclick="unlock()" style="display:none;">Попробовать снова за 50₽</button>
-  <div class="sidebar">
-    <h3>ТОП Победителей дня:</h3>
-    <ul id="topWinners">
-      <li>🧑 Алексей — 500₽</li>
-      <li>👩 Мария — 100₽</li>
-      <li>🧔 Игорь — 50₽</li>
-    </ul>
-    <p>🧮 Участников сегодня: <span id="userCount">17</span></p>
-  </div>
+
   <div class="info-buttons">
     <button onclick="showModal('rules')">📜 Правила участия</button>
     <button onclick="showModal('faq')">❓ FAQ</button>
@@ -91,65 +122,6 @@
 </div>
 
 <script>
-  let spinning = false;
-  let currentRotation = 0;
-  let canSpin = true;
-  let firstSpin = true;
-
-  const wheel = document.getElementById("wheel");
-  const resultEl = document.getElementById("result");
-  const spinBtn = document.getElementById("spinBtn");
-  const payBtn = document.getElementById("payBtn");
-
-  function getPrize() {
-    if (firstSpin) return 50;
-    const rand = Math.random() * 100;
-    if (rand < 8) return 500;
-    if (rand < 20) return 100;
-    if (rand < 40) return 50;
-    return 0;
-  }
-
-  function generateCode(prize) {
-    const timestamp = Date.now();
-    const randomPart = Math.random().toString(36).substring(2, 6).toUpperCase();
-    return `CODE-${prize}-${timestamp}-${randomPart}`;
-  }
-
-  function spin() {
-    if (spinning || !canSpin) return;
-
-    spinning = true;
-    spinBtn.disabled = true;
-    resultEl.innerHTML = "Крутим...";
-
-    const prize = getPrize();
-    const sector = prize === 0 ? 0 : prize === 50 ? 1 : prize === 100 ? 2 : 3;
-    const stopAngle = 360 * 5 + sector * 90 + 45;
-    currentRotation += stopAngle;
-
-    wheel.style.transform = `rotate(${currentRotation}deg)`;
-
-    setTimeout(() => {
-      if (prize > 0) {
-        const code = generateCode(prize);
-        resultEl.innerHTML = `🎉 Ты выиграл ${prize}₽!<br>💬 Секретный код: <b>${code}</b>`;
-      } else {
-        resultEl.innerHTML = "😞 Увы, не повезло.";
-      }
-      spinning = false;
-      canSpin = false;
-      payBtn.style.display = "inline-block";
-      firstSpin = false;
-    }, 5000);
-  }
-
-  function unlock() {
-    canSpin = true;
-    spinBtn.disabled = false;
-    payBtn.style.display = "none";
-  }
-
   function showModal(type) {
     const modal = document.getElementById("modal");
     const modalTitle = document.getElementById("modalTitle");
@@ -194,6 +166,60 @@
 
   function closeModal() {
     document.getElementById("modal").style.display = "none";
+  }
+
+  let spinning = false;
+  let currentRotation = 0;
+  let canSpin = true;
+  let firstSpin = true;
+
+  function getPrize() {
+    if (firstSpin) return 50;
+    const rand = Math.random() * 100;
+    if (rand < 10) return 500;
+    if (rand < 30) return 100;
+    if (rand < 63) return 50;
+    return 0;
+  }
+
+  function generateCode(prize) {
+    const timestamp = Date.now();
+    const randomPart = Math.random().toString(36).substring(2, 6).toUpperCase();
+    return `CODE-${prize}-${timestamp}-${randomPart}`;
+  }
+
+  function spin() {
+    if (spinning || !canSpin) return;
+
+    spinning = true;
+    document.getElementById("spinBtn").disabled = true;
+    document.getElementById("result").innerHTML = "Крутим...";
+
+    const prize = getPrize();
+    const sector = prize === 0 ? 0 : prize === 50 ? 1 : prize === 100 ? 2 : 3;
+    const stopAngle = 360 * 5 + sector * 90 + 45;
+    currentRotation += stopAngle;
+
+    document.getElementById("wheel").style.transform = `rotate(${currentRotation}deg)`;
+
+    setTimeout(() => {
+      if (prize > 0) {
+        const code = generateCode(prize);
+        document.getElementById("result").innerHTML = `🎉 Ты выиграл ${prize}₽!<br>💬 Секретный код: <b>${code}</b>`;
+      } else {
+        document.getElementById("result").innerHTML = "😞 Увы, не повезло.";
+      }
+      spinning = false;
+      canSpin = false;
+      document.getElementById("payBtn").style.display = "inline-block";
+      firstSpin = false;
+    }, 5000);
+  }
+
+  function unlock() {
+    canSpin = true;
+    document.getElementById("spinBtn").disabled = false;
+    document.getElementById("payBtn").style.display = "none";
   }
 </script>
 </body>
