--- a/index.html
+++ b/index.html
@@ -1,226 +1,119 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Крутани и Забери</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>VK Cash Wheel</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #1a1a2e;
+      background: #1a1a1a;
       color: #fff;
+      font-family: Arial, sans-serif;
       text-align: center;
-    }
-    .overlay {
-      padding: 40px 20px;
-      min-height: 100vh;
-    }
-    h1 {
-      font-size: 40px;
-      margin-bottom: 30px;
-    }
-    #wheel-container {
-      margin: 0 auto;
-      width: 320px;
-      height: 320px;
+      padding: 20px;
     }
     #wheel {
-      width: 100%;
-      height: 100%;
+      margin: 40px auto;
+      width: 300px;
+      height: 300px;
+      border: 10px solid #555;
       border-radius: 50%;
-      border: 10px solid #FFD700;
-      background: conic-gradient(
-        #e74c3c 0deg 90deg,
-        #f1c40f 90deg 180deg,
-        #2ecc71 180deg 270deg,
-        #3498db 270deg 360deg
-      );
-      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
+      position: relative;
     }
-    button {
-      margin-top: 30px;
-      font-size: 20px;
-      padding: 10px 30px;
-      background-color: #FFD700;
+    .segment {
+      position: absolute;
+      width: 50%;
+      height: 50%;
+      background: #ff4757;
+      transform-origin: 100% 100%;
+    }
+    #spinBtn {
+      padding: 15px 30px;
+      background: #2ed573;
       border: none;
-      color: black;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .result {
-      font-size: 28px;
-      margin-top: 40px;
-      font-weight: bold;
-    }
-    .info-buttons {
-      margin-top: 30px;
-    }
-    .info-buttons button {
-      margin: 5px;
-      padding: 10px 20px;
-      background-color: #333;
       color: white;
-      border: none;
+      font-size: 20px;
+      cursor: pointer;
       border-radius: 5px;
     }
-    #modal {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-    #modalContent {
-      background: #222;
-      padding: 30px;
-      max-width: 90%;
-      max-height: 80%;
-      overflow-y: auto;
-      border-radius: 10px;
-      text-align: left;
-    }
-    #modalContent h2 {
-      text-align: center;
-      margin-top: 0;
-    }
-    #modalClose {
+    #payBtn {
       margin-top: 20px;
-      background-color: #FFD700;
-      color: black;
+      padding: 12px 25px;
+      background: #1e90ff;
+      border: none;
+      color: white;
+      font-size: 18px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    #result, #secretCode {
+      margin-top: 25px;
+      font-size: 20px;
+    }
+    #copyBtn {
+      margin-top: 10px;
+      background: #666;
+      border: none;
+      color: white;
+      padding: 8px 16px;
+      border-radius: 4px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-<div class="overlay">
-  <h1>Крутани и Забери</h1>
-  <div id="wheel-container">
-    <div id="wheel"></div>
+  <h1>💸 Испытай удачу! 💸</h1>
+
+  <div id="wheel"></div>
+
+  <button id="spinBtn">Крутить колесо</button>
+  <div id="result"></div>
+
+  <div id="secretCode" style="display:none;">
+    <p>🔐 Твой код: <span id="codeText"></span></p>
+    <button id="copyBtn">Скопировать код</button>
   </div>
 
-  <button id="spinBtn" onclick="spin()">Крутить</button>
-  <div class="result" id="result"></div>
-  <button id="payBtn" onclick="unlock()" style="display:none;">Попробовать снова за 50₽</button>
+  <button id="payBtn" style="display:none;">Оплатить 50₽</button>
 
-  <div class="info-buttons">
-    <button onclick="showModal('rules')">📜 Правила участия</button>
-    <button onclick="showModal('faq')">❓ FAQ</button>
-    <button onclick="showModal('policy')">📋 Политика</button>
-    <button onclick="showModal('share')">📲 Поделиться</button>
-  </div>
-</div>
+  <script>
+    const rewards = [0, 0, 50, 0, 100, 0, 250, 0, 500, 0, 1000];
+    let hasSpun = false;
+    const merchantId = "F7202575639398546";
 
-<div id="modal">
-  <div id="modalContent">
-    <h2 id="modalTitle"></h2>
-    <div id="modalText"></div>
-    <button id="modalClose" onclick="closeModal()">Закрыть</button>
-  </div>
-</div>
+    document.getElementById("spinBtn").addEventListener("click", () => {
+      if (!hasSpun) {
+        hasSpun = true;
+        const result = rewards[Math.floor(Math.random() * rewards.length)];
+        document.getElementById("result").textContent = result > 0
+          ? `🎉 Ты выиграл ${result}₽!`
+          : "😢 Увы, ты не выиграл.";
 
-<script>
-  function showModal(type) {
-    const modal = document.getElementById("modal");
-    const modalTitle = document.getElementById("modalTitle");
-    const modalText = document.getElementById("modalText");
-    const content = {
-      rules: [
-        "1. Один бесплатный запуск.",
-        "2. За повтор платишь.",
-        "3. Всё рандом.",
-        "4. Выплаты вручную.",
-        "5. Взлом — бан.",
-        "6. Правила могут меняться."
-      ],
-      faq: [
-        "<b>Как играть?</b><br>Крути колесо, жди результат.",
-        "<b>Повтор?</b><br>После оплаты.",
-        "<b>Как получить выигрыш?</b><br>Отправь код в Telegram.",
-        "<b>Бесплатно?</b><br>Да, только первый раз.",
-        "<b>Гарантия?</b><br>Нет. Всё по-честному и случайно."
-      ],
-      policy: [
-        "1. Это развлечение.",
-        "2. Ничего не гарантируем.",
-        "3. Ты сам принимаешь решение.",
-        "4. Выплаты проверяются.",
-        "5. Нет возврата."
-      ],
-      share: [
-        "Приглашай друзей!",
-        "Ссылка:<br><b>https://chatgpt4142141241241.github.io/vk-cash-test/</b>"
-      ]
-    };
-    modalTitle.innerText = {
-      rules: "Правила участия",
-      faq: "FAQ",
-      policy: "Политика",
-      share: "Поделиться"
-    }[type];
-    modalText.innerHTML = "<ul><li>" + content[type].join("</li><li>") + "</li></ul>";
-    modal.style.display = "flex";
-  }
-
-  function closeModal() {
-    document.getElementById("modal").style.display = "none";
-  }
-
-  let spinning = false;
-  let currentRotation = 0;
-  let canSpin = true;
-  let firstSpin = true;
-
-  function getPrize() {
-    if (firstSpin) return 50;
-    const rand = Math.random() * 100;
-    if (rand < 10) return 500;
-    if (rand < 30) return 100;
-    if (rand < 63) return 50;
-    return 0;
-  }
-
-  function generateCode(prize) {
-    const timestamp = Date.now();
-    const randomPart = Math.random().toString(36).substring(2, 6).toUpperCase();
-    return `CODE-${prize}-${timestamp}-${randomPart}`;
-  }
-
-  function spin() {
-    if (spinning || !canSpin) return;
-
-    spinning = true;
-    document.getElementById("spinBtn").disabled = true;
-    document.getElementById("result").innerHTML = "Крутим...";
-
-    const prize = getPrize();
-    const sector = prize === 0 ? 0 : prize === 50 ? 1 : prize === 100 ? 2 : 3;
-    const stopAngle = 360 * 5 + sector * 90 + 45;
-    currentRotation += stopAngle;
-
-    document.getElementById("wheel").style.transform = `rotate(${currentRotation}deg)`;
-
-    setTimeout(() => {
-      if (prize > 0) {
-        const code = generateCode(prize);
-        document.getElementById("result").innerHTML = `🎉 Ты выиграл ${prize}₽!<br>💬 Секретный код: <b>${code}</b>`;
+        if (result > 0) {
+          const timestamp = Date.now();
+          const random = Math.random().toString(36).substring(2, 6).toUpperCase();
+          const code = `CODE-${result}-${timestamp}-${random}`;
+          document.getElementById("codeText").textContent = code;
+          document.getElementById("secretCode").style.display = "block";
+        } else {
+          document.getElementById("payBtn").style.display = "inline-block";
+        }
       } else {
-        document.getElementById("result").innerHTML = "😞 Увы, не повезло.";
+        alert("Попробуй снова после оплаты.");
       }
-      spinning = false;
-      canSpin = false;
-      document.getElementById("payBtn").style.display = "inline-block";
-      firstSpin = false;
-    }, 5000);
-  }
+    });
 
-  function unlock() {
-    canSpin = true;
-    document.getElementById("spinBtn").disabled = false;
-    document.getElementById("payBtn").style.display = "none";
-  }
-</script>
+    document.getElementById("copyBtn").addEventListener("click", () => {
+      const code = document.getElementById("codeText").textContent;
+      navigator.clipboard.writeText(code).then(() => {
+        alert("Код скопирован!");
+      });
+    });
+
+    document.getElementById("payBtn").addEventListener("click", () => {
+      const paymentUrl = `https://pay.freekassa.ru/?m=${merchantId}&oa=50&currency=RUB&o=${Date.now()}`;
+      window.open(paymentUrl, "_blank");
+    });
+  </script>
 </body>
 </html>
